--- a/src/app/styles/header.css
+++ b/src/app/styles/header.css
@@ -156,6 +156,26 @@
     cursor: pointer;
 }
 
+#header .border-panel .wrapper .info-panel .menu-panel .item .count {
+    width: 21px;
+    height: 21px;
+
+    color: white;
+    font-size: 11px;
+    font-weight: 700;
+
+    margin-left: 10px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    border-radius: 50%;
+
+    background-color: #A161B3;
+}
+
 #header .border-panel .wrapper .info-panel .menu-panel .item:hover {
     border-bottom: 2px solid #A161B3;
 }
