--- a/src/app/styles/order.css
+++ b/src/app/styles/order.css
@@ -121,6 +121,8 @@
     color: #383838;
     font-size: 20px;
     font-weight: 700;
+
+    margin-left: 20px;
 }
 
 .order .main-panel .button-panel {
