--- a/src/app/styles/shopmenu.css
+++ b/src/app/styles/shopmenu.css
@@ -2,7 +2,7 @@
     
 }
 
-#shop-menu .content {
+#shop-menu .shop-menu-content {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
