--- a/src/app/styles/about.css
+++ b/src/app/styles/about.css
@@ -9,6 +9,7 @@
 #about .content {
     display: flex;
     flex-direction: column;
+    align-items: center;
 
     width: 100%;
     max-width: 1600px;
