--- a/src/app/styles/cart.css
+++ b/src/app/styles/cart.css
@@ -6,168 +6,150 @@
 
 #cart .content {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    flex-direction: row;
 
     width: 100%;
     max-width: 1600px;
 
-    padding: 50px 100px;
+    padding: 0px 100px;
 }
 
-@media (max-width: 1300px) {
+@media (max-width: 1200px) {
     #cart .content {
-        padding: 50px;
+        padding: 0px 50px;
+
+        flex-direction: column;
     }
 }
 
 @media (max-width: 800px) {
     #cart .content {
-        padding: 50px 20px;
+        padding: 0px 20px;
     }
 }
 
-#cart .content .title {
+#cart .content .body {
+    flex: 1;
+
+    display: flex;
+    flex-direction: column;
+
+    padding: 50px 50px 50px 0px;
+}
+
+@media (max-width: 1200px) {
+    #cart .content .body {
+        width: 100%;
+
+        padding: 50px 0px;
+    }
+}
+
+#cart .content .body .heading {
     color: #383838;
-    font-size: 40px;
+    font-size: 35px;
     font-weight: 700;
 
-    margin-bottom: 50px;
-}
-
-@media (max-width: 800px) {
-    #cart .content .title {
-        margin-bottom: 30px;
-    }
-}
-
-#cart .content .empty-message {
-    color: #383838;
-    font-size: 20px;
-    font-weight: 400;
-}
-
-#cart .content .product {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-
-    width: 100%;
-    height: 200px;
-
-    margin-bottom: 50px;
-}
-
-@media (max-width: 800px) {
-    #cart .content .product {
-        margin-bottom: 30px;
-    }
-}
-
-#cart .content .product .image {
-    width: 200px;
-    height: 200px;
-    object-fit: contain;
-
     margin: 0px;
+    margin-bottom: 50px;
 }
 
-@media (max-width: 800px) {
-    #cart .content .product .image {
-        width: 120px;
-        height: 200px;
+#cart .content .body .empty-panel {
+    flex: 1;
 
-        object-fit: contain;
-    }
-}
-
-#cart .content .product .info {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    justify-content: space-between;
 
-    flex: 1;
-
-    padding: 0px 30px;
+    margin-top: 20px;
 }
 
-@media (max-width: 800px) {
-    #cart .content .product .info {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-
-        padding: 0px 0px 0px 20px;
-    }
-}
-
-#cart .content .product .info .name {
+#cart .content .body .empty-panel .message {
     color: #383838;
-    font-size: 24px;
-    font-weight: 700;
-
-    margin-bottom: 10px;
-
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical;
-}
-
-#cart .content .product .info .description {
-    color: rgba(0, 0, 0, 0.5);
-    font-size: 17px;
+    font-size: 20px;
     font-weight: 400;
-    line-height: 27px;
 
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-
-    margin: 0px;
     margin-bottom: 30px;
 }
 
-@media (max-width: 800px) {
-    #cart .content .product .info .name {
-        font-size: 20px;
-    
-        margin-bottom: 5px;
-    }
-
-    #cart .content .product .info .description {
-        font-size: 15px;
-        line-height: 22px;
-
-        margin-bottom: 15px;
-    }
+#cart .content .body .empty-panel .button-filled {
+    margin: 0px;
 }
 
-#cart .content .product .info .bottom-panel {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-
+#cart .content .body .header {
     width: 100%;
 
-    margin: 0px;
-    padding: 0px;
+    display: grid;
+    grid-template-columns: 70px 1fr 80px 70px 70px;
+    /*grid-template-columns: 70px 350px 1fr 100px 100px;*/
+    gap: 50px;
+
+    margin-bottom: 20px;
+    padding-bottom: 10px;
+
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
-@media (max-width: 800px) {
-    #cart .content .product .info .bottom-panel {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-    
-        width: 100%;
-    }
+#cart .content .body .header .item {
+    color: #383838;
+    font-size: 18px;
+    font-weight: 700;
 }
 
-#cart .content .product .info .bottom-panel .controls {
+#cart .content .body .products {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+#cart .content .body .product {
+    width: 100%;
+
+    display: grid;
+    grid-template-columns: 70px 1fr 80px 70px 70px;
+    gap: 50px;
+
+    align-items: center;
+
+    margin-bottom: 20px;
+
+    text-decoration: none;
+}
+
+#cart .content .body .product .image {
+    width: 100%;
+}
+
+#cart .content .body .product .name {
+    color: #383838;
+    font-size: 18px;
+    font-weight: 700;
+
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+#cart .content .body .product .name .points {
+    color: rgba(0, 0, 0, 0.5);
+    font-size: 16px;
+    font-weight: 400;
+}
+
+#cart .content .body .product .price {
+    color: #383838;
+    font-size: 18px;
+    font-weight: 400;
+}
+
+#cart .content .body .product .total {
+    color: #383838;
+    font-size: 18px;
+    font-weight: 700;
+}
+
+#cart .content .body .product .controls {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -175,13 +157,7 @@
     height: 25px;
 }
 
-@media (max-width: 800px) {
-    #cart .content .product .info .bottom-panel .controls {
-        margin-bottom: 15px;
-    }
-}
-
-#cart .content .product .info .bottom-panel .controls .button {
+#cart .content .body .product .controls .button {
     width: 25px;
     height: 25px;
 
@@ -199,11 +175,11 @@
     background-color: rgba(0, 0, 0, 0.12);
 }
 
-#cart .content .product .info .bottom-panel .controls .button:hover {
+#cart .content .body .product .controls .button:hover {
     background-color: rgba(0, 0, 0, 0.2);
 }
 
-#cart .content .product .info .bottom-panel .controls .amount {
+#cart .content .body .product .controls .amount {
     color: #383838;
     font-size: 15px;
     font-weight: 700;
@@ -218,37 +194,119 @@
     background-color: rgba(0, 0, 0, 0.07);
 }
 
-#cart .content .product .info .bottom-panel .price {
-    color: #383838;
-    font-size: 22px;
-    font-weight: 700;
-}
-
 @media (max-width: 800px) {
-    #cart .content .product .info .bottom-panel .price {
-        font-size: 19px;
+    #cart .content .body .header {
+        width: 100%;
+    
+        grid-template-columns: 1fr 3fr 2fr 1.5fr 1.5fr;
+        gap: 10px;
+    }
+    
+    #cart .content .body .header .item {
+        font-size: 13px;
+    }
+
+    #cart .content .body .products {
+        width: 100%;
+    }
+
+    #cart .content .body .product {
+        width: 100%;
+    
+        grid-template-columns: 1fr 3fr 2fr 1.5fr 1.5fr;
+        gap: 10px;
+    }
+    
+    #cart .content .body .product .image {
+        width: 100%;
+    }
+    
+    #cart .content .body .product .name {
+        font-size: 13px;
+    }
+    
+    #cart .content .body .product .name .points {
+        font-size: 13px;
+    }
+    
+    #cart .content .body .product .price {
+        font-size: 13px;
+    }
+    
+    #cart .content .body .product .total {
+        font-size: 13px;
+    }
+    
+    #cart .content .body .product .controls {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    
+        height: 20px;
+    }
+    
+    #cart .content .body .product .controls .button {
+        width: 20px;
+        height: 20px;
+    
+        font-size: 13px;
+    }
+    
+    #cart .content .body .product .controls .button:hover {
+        background-color: rgba(0, 0, 0, 0.2);
+    }
+    
+    #cart .content .body .product .controls .amount {
+        font-size: 13px;
+        
+        height: 100%;
     }
 }
 
-#cart .content .button-panel {
+#cart .content .body .coupon-panel {
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+
+    padding: 20px 0px;
+    margin-top: 50px;
+
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+#cart .content .body .coupon-panel .heading {
+    color: #383838;
+    font-size: 20px;
+    font-weight: 700;
+
+    margin-bottom: 30px;
+}
+
+#cart .content .body .coupon-panel .input-panel {
+    width: 100%;
+
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
-
-    margin-top: 30px;
+    align-items: center;
 }
 
-#cart .content .button-panel .button-filled, .button-outline {
-    margin-right: 20px;
+#cart .content .body .coupon-panel .input-panel .field {
+    color: black;
+    font-size: 15px;
+    font-weight: 400;
+
+    margin: 0px;
+    padding: 8px;
+
+    width: 250px;
+
+    border: 1px solid lightgray;
+    outline: none;
 }
 
-@media (max-width: 800px) {
-    #cart .content .button-panel {
-        flex-direction: column;
-        align-items: flex-start;
-    }
+#cart .content .body .coupon-panel .input-panel .button-filled {
+    margin: 0px;
 
-    #cart .content .button-panel .button-filled, .button-outline {
-        margin-bottom: 20px;
-    }
+    margin-left: 15px;
 }
