--- a/src/app/styles/checkoutform.css
+++ b/src/app/styles/checkoutform.css
@@ -4,11 +4,10 @@
 }
 
 form {
-    width: 500px;
-    box-shadow: 0px 0px 0px 0.5px rgba(50, 50, 93, 0.1),
-      0px 2px 5px 0px rgba(50, 50, 93, 0.1), 0px 1px 1.5px 0px rgba(0, 0, 0, 0.07);
-    border-radius: 7px;
-    padding: 30px;
+    width: 100%;
+
+    border-radius: 3px;
+    padding: 0px;
 
     margin-top: 50px;
 }
@@ -59,13 +58,15 @@ input {
 }
 
 #card-element {
-    border-radius: 4px 4px 0 0;
+    border-radius: 3px;
     padding: 12px;
     border: 1px solid rgba(50, 50, 93, 0.1);
     max-height: 44px;
     width: 100%;
     background: white;
     box-sizing: border-box;
+
+    background-color: white;
 }
 #payment-request-button {
     margin-bottom: 32px;
@@ -73,19 +74,25 @@ input {
 
 /* Buttons and links */
 button {
-    background:#A161B3;
-    font-family: Arial, sans-serif;
-    color: #ffffff;
-    border-radius: 0 0 4px 4px;
-    border: 0;
-    padding: 12px 16px;
+    width: 100%;
+   
+    color: #383838;
     font-size: 16px;
-    font-weight: 600;
+    font-weight: 700;
+
+    padding: 10px;
+
     cursor: pointer;
     display: block;
+
     transition: all 0.2s ease;
-    box-shadow: 0px 4px 5.5px 0px rgba(0, 0, 0, 0.07);
-    width: 100%;
+
+    border-radius: 3px;
+    border: none;
+
+    margin-top: 20px;
+
+    background: white;
 }
 
 button:hover {
