--- a/src/app/styles/quiz.css
+++ b/src/app/styles/quiz.css
@@ -82,6 +82,18 @@
     background-color: rgba(0, 0, 0, 0.05);
 }
 
+@media (max-width: 1000px) {
+    #quiz .content .summary .line {
+        margin: 0px 10px;
+    }
+
+    #quiz .content .summary .number {
+        font-size: 14px;
+    
+        margin: 0px;
+    }
+}
+
 #quiz .content .summary .filled {
     color: white;
     background-color: #A161B3;
@@ -102,6 +114,12 @@
     text-align: center;
 
     margin-bottom: 50px;
+}
+
+@media (max-width: 1000px) {
+    #quiz .content .step .title {
+        font-size: 30px;
+    }
 }
 
 #quiz .content .step .faded {
@@ -147,7 +165,11 @@
     font-weight: 700;
 
     width: 30px;
+    max-width: 30px;
+    min-width: 30px;
     height: 30px;
+    max-height: 30px;
+    min-height: 30px;
 
     margin-right: 20px;
 
@@ -176,6 +198,18 @@
     text-decoration: none;
 
     position: relative;
+}
+
+@media (max-width: 1000px) {
+    #quiz .content .step .results {
+        display: grid;
+        grid-template-columns: auto;
+        gap: 0px;
+    }
+
+    #quiz .content .step .results .product {
+        width: 100%;
+    }
 }
 
 #quiz .content .step .results .product .image {
