--- a/src/app/styles/banner.css
+++ b/src/app/styles/banner.css
@@ -80,10 +80,12 @@
 
         width: 100vw;
         
+        /*
         height: 100%;
         height: -moz-available;
         height: -webkit-fill-available;
         height: fill-available;
+        */
 
         z-index: 800;
 
@@ -98,10 +100,11 @@
 
         display: flex;
         flex-direction: column;
-        align-items: center;
+        align-items: flex-start;
         justify-content: center;
 
         padding: 20px;
+        padding-right: 60px;
     }
 
     #banner .body .cancel {
@@ -118,14 +121,13 @@
     #banner .body .info-panel {
         display: flex;
         flex-direction: column;
-        align-items: center;
+        align-items: flex-start;
     }
 
     #banner .body .info-panel .title {
         color: white;
         font-size: 27px;
         font-weight: 700;
-        text-align: center;
 
         margin-bottom: 20px;
     }
@@ -135,7 +137,6 @@
         font-size: 16px;
         font-weight: 300;
         line-height: 26px;
-        text-align: center;
 
         margin-bottom: 30px;
     }
@@ -153,6 +154,8 @@
         align-items: center;
 
         margin-top: 30px;
+
+        display: none;
     }
 
     #banner .body .image-panel .image {
