--- a/src/app/styles/doterraregister.css
+++ b/src/app/styles/doterraregister.css
@@ -138,7 +138,7 @@
 
     padding: 8px;
 
-    margin: 30px 0px 50px 0px;
+    margin: 30px 0px 20px 0px;
 
     width: 250px;
 
@@ -150,6 +150,17 @@
     #doterra-register .content .body .field {
         width: 100%;
     }
+}
+
+#doterra-register .content .body .error {
+    color: red;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 16px;
+
+    margin-bottom: 30px;
+
+    opacity: 0;
 }
 
 #doterra-register .content .body .button-panel {
