--- a/src/app/styles/admin.css
+++ b/src/app/styles/admin.css
@@ -350,13 +350,47 @@
     }
 }
 
+#admin-analytics .calendar {
+    width: 600px;
+
+    padding: 20px;
+
+    background-color: white;
+    box-shadow: 0px 0px 20px -10px lightgray;
+}
+
+#admin-analytics .calendar-item {
+    padding: 15px 0px;
+    margin: 0px;
+
+    text-align: left;
+
+    border-radius: 0px;
+}
+
+#admin-analytics .selected {
+    color: #A161B3;
+    font-size: 150%;
+    font-weight: 900;
+}
+
+#admin-analytics .heading {
+    color: #383838;
+    font-size: 40px;
+    font-weight: 700;
+
+    padding: 75px 0px;
+}
+
+#admin-analytics .heading .timespan {
+    font-size: 20px;
+}
+
 #admin-analytics .statistics {
     width: 100%;
 
     display: flex;
     flex-direction: column;
-
-    margin-top: 30px;
 }
 
 #admin-analytics .statistics .line {
