--- a/src/app/styles/admin.css
+++ b/src/app/styles/admin.css
@@ -71,6 +71,10 @@
 
     width: 100%;
 
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
     padding-bottom: 5px;
     margin: 30px 0px;
 
@@ -481,4 +485,188 @@
     resize: none;
 
     margin: 30px 0px;
+}
+
+
+#admin-archive .content {
+    
+}
+
+#admin-archive .chooser {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+#admin-archive .item {
+    padding: 15px;
+    padding-right: 10px;
+
+    font-size: 16px;
+}
+
+#admin-archive .videos {
+    width: 100%;
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 30px;
+}
+
+@media (max-width: 1300px) {
+    #admin-archive .videos {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media (max-width: 1000px) {
+    #admin-archive .videos {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 600px) {
+    #admin-archive .videos {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+#admin-archive .videos .video {
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+
+    background-color: white;
+    box-shadow: 0px 0px 20px -10px gray;
+
+    border-radius: 10px;
+
+    transition: all 200ms;
+
+    text-decoration: none;
+}
+
+#admin-archive .videos .video:hover {
+    box-shadow: 0px 0px 30px -15px gray;
+}
+
+#admin-archive .videos .video .image {
+    width: 100%;
+    height: 170px;
+
+    object-fit: cover;
+
+    margin: 0px;
+    padding: 0px;
+
+    border-radius: 5px 5px 0px 0px;
+
+    background-color: rgba(0, 0, 0, 0.05);
+}
+
+#admin-archive .videos .video .info {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+    padding: 15px;
+
+    background-color: white;
+
+    border-radius: 0px 0px 5px 5px;
+}
+
+#admin-archive .videos .video .info .name {
+    color: #383838;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 16px;
+
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+}
+
+#admin-archive .videos .video .info .data {
+    color: #A161B3;
+    font-size: 13px;
+    font-weight: 600;
+    line-height: 13px;
+
+    margin-top: 7px;
+
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+}
+
+#admin-archive .videos .video .info .description {
+    color: #383838;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 25px;
+
+    margin-top: 12px;
+
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+
+#admin-video .item {
+    font-size: 16px;
+}
+
+#admin-video .selected {
+    background-color: #A161B3;
+    color: white;
+}
+
+#admin-archive .item:hover {
+    background-color: rgba(0, 0, 0, 0.07);
+}
+
+#admin-archive .item ion-icon {
+    width: 17px;
+    height: 17px;
+
+    padding: 5px;
+
+    border-radius: 50%;
+
+    margin-left: 10px;
+}
+
+#admin-archive .item ion-icon:hover {
+    background-color: rgba(0, 0, 0, 0.05);
+}
+
+.quill-class-element {
+    color: red;
+    font-size: 50px;
+    font-weight: 700;
+}
+
+#editor {
+    width: 100%;
+    height: 400px;
+
+    border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.ql-spanblock:after {
+    content: "id";
+
+    color: black;
 }
