--- a/src/app/styles/home.css
+++ b/src/app/styles/home.css
@@ -8,13 +8,19 @@
     background-color: white;
 }
 
+.banner-buttons {
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 15px;
+}
+
 @media (min-width: 1200px) {
     #home .slideshow {
         width: 100%;
         height: 100vh;
         max-height: 550px;
 
-        background:linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6)), url("../assets/image-landing.jpg");
+        background:linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6)), url("../assets/landing-banner.jpg");
         background-repeat: no-repeat;
         background-size: cover;
 
@@ -75,7 +81,7 @@
     #home .slideshow {
         width: 100%;
 
-        background:linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6)), url("../assets/image-landing.jpg");
+        background:linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6)), url("../assets/landing-banner.jpg");
         background-repeat: no-repeat;
         background-size: cover;
 
