--- a/src/app/styles/archive.css
+++ b/src/app/styles/archive.css
@@ -6,6 +6,17 @@
     align-items: center;
 }
 
+.charity-message {
+    color: #383838;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+
+    align-self: flex-start;
+
+    margin-bottom: 40px;
+}
+
 #archive .content {
     display: flex;
     flex-direction: column;
@@ -232,7 +243,7 @@
     justify-content: space-between;
 
     padding: 20px;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
 
     border-radius: 5px;
 
