--- a/src/app/styles/home.css
+++ b/src/app/styles/home.css
@@ -20,7 +20,7 @@
         height: 100vh;
         max-height: 550px;
 
-        background:linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6)), url("../assets/landing-banner.jpg");
+        background:linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6)), url("../assets/image-landing.jpg");
         background-repeat: no-repeat;
         background-size: cover;
 
@@ -81,7 +81,7 @@
     #home .slideshow {
         width: 100%;
 
-        background:linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6)), url("../assets/landing-banner.jpg");
+        background:linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6)), url("../assets/image-landing.jpg");
         background-repeat: no-repeat;
         background-size: cover;
 
