--- a/src/app/styles/success.css
+++ b/src/app/styles/success.css
@@ -34,7 +34,11 @@
 
     width: 50%;
 
-    margin-bottom: 60px;
+    margin-bottom: 30px;
+}
+
+#success .content .button-filled {
+    margin-top: 30px;
 }
 
 @media (max-width: 1100px) {
