--- a/src/app/styles/coupon-popup.css
+++ b/src/app/styles/coupon-popup.css
@@ -122,15 +122,20 @@
     width: 100%;
     margin: -10px;
 
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    overflow: scroll;
 
     background-color: none;
     box-shadow: none;
 }
 
+.coupon-popup-screen .popup .video-panel .wrapper {
+    display: flex;
+    flex-direction: row;
+}
+
 .coupon-popup-screen .popup .video-panel .video-item {
+    min-width: 200px;
+
     padding: 10px;
     margin: 8px;
 
