--- a/src/app/styles/profile.css
+++ b/src/app/styles/profile.css
@@ -32,29 +32,28 @@
     flex-direction: row;
     align-items: center;
 
-    margin-bottom: 50px;
+    margin-bottom: 30px;
 }
 
-#profile .content .header .button-panel {
+#profile .content .button-panel {
+    width: 100%;
+
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+
+    margin-bottom: 30px;
+}
+
+#profile .content .button-panel .button-filled {
+    margin-bottom: 15px;
 }
 
 @media (max-width: 800px) {
     #profile .content .header {
         flex-direction: column;
         align-items: flex-start;
-    }
-
-    #profile .content .header .button-panel {
-       display: flex;
-       flex-direction: column;
-
-       margin-top: 20px;
-    }
-
-    #profile .content .header .button-panel .button-filled {
-        margin-bottom: 15px;
     }
 }
 
